fix: center alignment in actions

--- a/src/components/task-list/task-list.scss
+++ b/src/components/task-list/task-list.scss
@@ -33,6 +33,7 @@
 		.actions {
 			display: flex;
 			flex-direction: row;
+			align-items: center;
 			gap: 10px;
 
 			div {
